--- a/index.html
+++ b/index.html
@@ -7,18 +7,51 @@
     <title>User information</title>
     <!-- bootstrap link  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+    <style>
+        .search-result{
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            align-items: center;
+        }
+        .user-id{
+            display: flex;
+            justify-content: space-between;
+        }
+    </style>
 </head>
 <body>
     <header class="my-4">
         <h2 class="text-center">Search Your User Id</h2>
     </header>
-    <div class="search-box w-75 mx-auto">
-        <div class="input-group mb-3">
-            <input type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
-            <button class="btn btn-outline-secondary" type="button" id="button-addon2">Button</button>
-          </div>
-    </div>
+    <main>
+        <div class="search-box w-75 mx-auto">
+            <div class="input-group mb-5">
+                <input id="userId" type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
+                <button onclick="checkUser()" class="btn btn-outline-secondary" type="button" id="button-addon2">Button</button>
+              </div>
+        </div>
+        <div id="main" class="search-result w-75 mx-auto border py-3 rounded shadow ">
+            <div class="user-image mb-3">
+                <img src="./image/undraw_profile_pic_ic-5-t.svg" width="100" alt="user">
+            </div>
+            <div class="user-email mb-3">
+                <h3>User Email</h3>
+            </div>
+            <div class="user-title mb-3">
+                <h4>User Title</h4>
+            </div>
+            <div class="user-description mb-3">
+                <p>description</p>
+            </div>
+            <div class="user-id w-75">
+                <span>User Id</span>
+                <span>Post Id</span>
+            </div>
+
+        </div>
+    </main>
+
 
     <!-- bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
