--- a/index.html
+++ b/index.html
@@ -25,34 +25,38 @@
         <h2 class="text-center">Search Your User Id</h2>
     </header>
     <main>
-        <div class="search-box w-75 mx-auto">
+        <div class="search-box w-50 mx-auto">
+            <p id="error" class="text-danger"></p>
             <div class="input-group mb-5">
-                <input id="userId" type="text" class="form-control" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="button-addon2">
-                <button onclick="checkUser()" class="btn btn-outline-secondary" type="button" id="button-addon2">Button</button>
+                <input id="userId" type="text" class="form-control" placeholder="Input Your Id Number" aria-label="Recipient's username" aria-describedby="button-addon2">
+                <button onclick="checkUser()" class="btn btn-outline-secondary" type="button" id="button-addon2">Search</button>
               </div>
         </div>
-        <div id="main" class="search-result w-75 mx-auto border py-3 rounded shadow ">
-            <div class="user-image mb-3">
-                <img src="./image/undraw_profile_pic_ic-5-t.svg" width="100" alt="user">
-            </div>
-            <div class="user-email mb-3">
-                <h3>User Email</h3>
-            </div>
-            <div class="user-title mb-3">
-                <h4>User Title</h4>
-            </div>
-            <div class="user-description mb-3">
-                <p>description</p>
-            </div>
-            <div class="user-id w-75">
-                <span>User Id</span>
-                <span>Post Id</span>
+        <div id="main" class=" w-75 mx-auto border py-3 rounded shadow ">
+            <div class=" search-result">
+                <div class="user-image mb-3">
+                    <img src="./image/undraw_profile_pic_ic-5-t.svg" width="100" alt="user">
+                </div>
+                <div class="user-email mb-3">
+                    <h3>User Email</h3>
+                </div>
+                <div class="user-title mb-3">
+                    <h4>User Title</h4>
+                </div>
+                <div class="user-description mb-3">
+                    <p>description</p>
+                </div>
+                <div class="user-id w-75">
+                    <span>User Id</span>
+                    <span>Post Id</span>
+                </div>
             </div>
 
         </div>
     </main>
 
-
+    <!-- vanila js  -->
+    <script src="./js/main.js"></script>
     <!-- bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
