--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User information</title>
+    <link rel="shortcut icon" href="./image/undraw_profile_pic_ic-5-t.svg" type="image/svg">
     <!-- bootstrap link  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <style>
@@ -17,6 +18,10 @@
         .user-id{
             display: flex;
             justify-content: space-between;
+        }
+        .user-name{
+            text-transform: capitalize;
+            color: aqua;
         }
     </style>
 </head>
@@ -32,7 +37,7 @@
                 <button onclick="checkUser()" class="btn btn-outline-secondary" type="button" id="button-addon2">Search</button>
               </div>
         </div>
-        <div id="main" class=" w-75 mx-auto border py-3 rounded shadow ">
+        <div id="main" class=" w-75 mx-auto border p-3 rounded shadow ">
             <div class=" search-result">
                 <div class="user-image mb-3">
                     <img src="./image/undraw_profile_pic_ic-5-t.svg" width="100" alt="user">
@@ -41,7 +46,7 @@
                     <h3>User Email</h3>
                 </div>
                 <div class="user-title mb-3">
-                    <h4>User Title</h4>
+                    <h4 class="user-name">User Title</h4>
                 </div>
                 <div class="user-description mb-3">
                     <p>description</p>
